--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    
+<body onload="init()">
+    <div id="game-board"></div>
+    <script src="script.js"></script>
 </body>
-</html>git commigit bragit 
+</html>
